--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "signaling",
     "secure"
   ],
-  "author": "Danilo Bargen",
+  "author": "Threema GmbH",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js/issues"
   },
-  "homepage": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js#readme"
+  "homepage": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js#readme",
+  "dependencies": {
+    "chunked-dc": "^0.1.1",
+    "webrtc-adapter": "^2.0.4"
+  }
 }
