--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "saltyrtc-task-webrtc",
   "version": "0.1.0",
   "description": "A SaltyRTC WebRTC task implementation.",
-  "main": "index.js",
+  "main": "dist/saltyrtc-task-webrtc.es5.min.js",
+  "module": "dist/saltyrtc-task-webrtc.es2015.js",
+  "jsnext:main": "dist/saltyrtc-task-webrtc.es2015.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run --log-level=debug --colors",
+    "dist": "npm run dist_es5 && npm run dist_es5_min && npm run dist_es2015 && cp saltyrtc/saltyrtc.d.ts dist/",
+    "dist_es5": "rollup -c rollup/es5.js",
+    "dist_es5_min": "rollup -c rollup/es5.min.js",
+    "dist_es2015": "rollup -c rollup/es2015.js",
+    "rollup_tests": "rollup -c rollup/testing.js",
+    "validate": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -25,8 +33,23 @@
   },
   "homepage": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js#readme",
   "dependencies": {
-    "chunked-dc": "^0.1.1",
-    "saltyrtc-client": "^0.1.4",
+    "chunked-dc": "^0.2.1",
+    "saltyrtc-client": "^0.1.8",
     "webrtc-adapter": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-plugin-external-helpers": "^6.8.0",
+    "babel-es6-polyfill": "^1.1.0",
+    "babel-preset-es2015": "^6.16.0",
+    "jasmine-core": "^2.5.0",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "rollup": "^0.36.3",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-uglify": "^1.0.1",
+    "typescript": "^2.0.3"
   }
 }
