--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
     "compilerOptions": {
         "target": "ES2015",
         "module": "es2015",
+        "moduleResolution": "node",
         "removeComments": true
     },
     "exclude": [
         "node_modules",
         "tests",
-        "build",
         "dist"
     ]
 }
