--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   "homepage": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js#readme",
   "dependencies": {
     "chunked-dc": "^0.2.2",
-    "saltyrtc-client": "^0.2.2",
-    "webrtc-adapter": "^2.0.4"
+    "saltyrtc-client": "^0.2.2"
   },
   "devDependencies": {
     "babel-es6-polyfill": "^1.1.0",
@@ -52,6 +51,7 @@
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "webrtc-adapter": "^2.0.4"
   }
 }
