--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/saltyrtc-task-webrtc.es5.min.js",
   "module": "dist/saltyrtc-task-webrtc.es2015.js",
   "jsnext:main": "dist/saltyrtc-task-webrtc.es2015.js",
-  "types": "dist/saltyrtc-task-webrtc.d.ts",
+  "types": "saltyrtc-task-webrtc.d.ts",
   "scripts": {
     "test": "karma start --single-run --log-level=debug --colors",
-    "dist": "npm run dist_es2015 && npm run dist_es5 && npm run dist_es5_min && npm run dist_es5_min_polyfill && cp src/saltyrtc-task-webrtc.d.ts dist/",
+    "dist": "npm run dist_es2015 && npm run dist_es5 && npm run dist_es5_min && npm run dist_es5_min_polyfill",
     "dist_es5": "rollup -c rollup/es5.js",
     "dist_es5_min": "rollup -c rollup/es5.min.js",
     "dist_es5_min_polyfill": "rollup -c rollup/es5.min.polyfill.js",
