--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tweetnacl": ">= 0.14.3"
   },
   "devDependencies": {
+    "@types/webrtc": "0.0.20",
     "babel-es6-polyfill": "^1.1.0",
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
@@ -54,7 +55,7 @@
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "saltyrtc-client": "^0.2.2",
+    "saltyrtc-client": "^0.2.4",
     "typescript": "^2.0.3",
     "webrtc-adapter": "^2.0.4"
   }
