--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tweetnacl": ">= 0.14.3"
   },
   "devDependencies": {
+    "@types/webrtc": "0.0.21",
     "babel-es6-polyfill": "^1.1.0",
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
