--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "msgpack-lite": "^0.1.26",
     "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
     "saltyrtc-client": "^0.5.0",
+    "tweetnacl": ">= 0.14.3",
     "typescript": "^2.0.3",
     "webrtc-adapter": "^2.0.4"
   }
