--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,13 @@
         "target": "ES2015",
         "module": "es2015",
         "moduleResolution": "node",
+        "lib": [
+            "es2015",
+            "es2016",
+            "es2017",
+            "dom"
+        ],
+        "skipLibCheck": true,
         "removeComments": true
     },
     "exclude": [
