--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saltyrtc/task-webrtc",
-  "version": "0.9.4",
+  "version": "0.10.0",
   "description": "A SaltyRTC WebRTC task implementation.",
   "main": "dist/saltyrtc-task-webrtc.es5.min.js",
   "module": "dist/saltyrtc-task-webrtc.es2015.js",
@@ -38,8 +38,8 @@
     "@saltyrtc/chunked-dc": "^1.0.0"
   },
   "peerDependencies": {
-    "@saltyrtc/client": "^0.9.0",
-    "tweetnacl": ">= 0.14.3"
+    "@saltyrtc/client": "^0.10.0",
+    "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
     "@saltyrtc/client": "^0.9.1",
@@ -57,7 +57,7 @@
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "tweetnacl": ">= 0.14.3",
+    "tweetnacl": "^1.0.0",
     "typescript": "^2.1.5",
     "webrtc-adapter": "^2.0.4"
   }
