Disband tight interaction between the task and WebRTC data channels
Data channel instances are no longer handled by the task. The
application has to take care of managing data channels itself. If the
application wants to apply the established SaltyRTC session keys, it can
use a DataChannelCryptoContext instance to encrypt and decrypt data.

Furthermore, if the application wants to hand over the signalling
channel to a dedicated data channel, that data channel must also be
managed by the application itself while the SignalingTransport will take
care of the crypto and the chunking.

In addition, the maximum packet size negotiation has been removed.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saltyrtc/task-webrtc",
-  "version": "0.13.0",
-  "description": "A SaltyRTC WebRTC task implementation.",
+  "version": "0.14.0",
+  "description": "A SaltyRTC WebRTC task v1 implementation.",
   "main": "dist/saltyrtc-task-webrtc.es5.min.js",
   "module": "dist/saltyrtc-task-webrtc.es2015.js",
   "jsnext:main": "dist/saltyrtc-task-webrtc.es2015.js",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/saltyrtc/saltyrtc-task-webrtc-js#readme",
   "dependencies": {
-    "@saltyrtc/chunked-dc": "^1.1.1"
+    "@saltyrtc/chunked-dc": "^2.0.0"
   },
   "peerDependencies": {
     "@saltyrtc/client": "^0.13.2",
@@ -63,7 +63,7 @@
   },
   "files": [
     "dist",
-    "saltyrtc-task-webrtc.d.ts",
+      "saltyrtc-task-webrtc.d.ts",
     "README.md",
     "LICENSE.md",
     "CHANGELOG.md",
