--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@saltyrtc/task-webrtc",
-  "version": "0.13.0",
-  "description": "A SaltyRTC WebRTC task implementation.",
-  "main": "dist/saltyrtc-task-webrtc.es5.min.js",
-  "module": "dist/saltyrtc-task-webrtc.es2015.js",
-  "jsnext:main": "dist/saltyrtc-task-webrtc.es2015.js",
-  "types": "saltyrtc-task-webrtc.d.ts",
+  "version": "0.14.0",
+  "description": "A SaltyRTC WebRTC task v2 implementation.",
+  "main": "dist/saltyrtc-task-webrtc-v2.es5.min.js",
+  "module": "dist/saltyrtc-task-webrtc-v2.es2015.js",
+  "jsnext:main": "dist/saltyrtc-task-webrtc-v2.es2015.js",
+  "types": "saltyrtc-task-webrtc-v2.d.ts",
   "scripts": {
     "test": "karma start --single-run --log-level=debug --colors",
     "dist": "npm run dist_es2015 && npm run dist_es5 && npm run dist_es5_min && npm run dist_es5_min_polyfill",
@@ -63,7 +63,7 @@
   },
   "files": [
     "dist",
-    "saltyrtc-task-webrtc.d.ts",
+    "saltyrtc-task-webrtc-v2.d.ts",
     "README.md",
     "LICENSE.md",
     "CHANGELOG.md",
