--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,68 @@
 version: 2
+
+references:
+  test-steps: &test-steps
+    - checkout
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "package.json" }}
+        # fallback to using the latest cache if no exact match is found
+        - v1-dependencies-
+
+    # Install dependencies
+    - run: npm install
+    - save_cache:
+        paths:
+          - node_modules
+        key: v1-dependencies-{{ checksum "package.json" }}
+
+    # Start SaltyRTC server
+    - run: saltyrtc-server-launcher > /saltyrtc/server.pid && sleep 2
+
+    # Show browser version
+    - run: if which firefox >/dev/null; then firefox --version; fi
+    - run: if which chrome >/dev/null; then chrome --version; fi
+    - run: if which chromium >/dev/null; then chromium --version; fi
+
+    # Run tests
+    - run:
+        name: Run tests
+        command: npm run rollup_tests && npm test -- --browsers $BROWSER
+    - run:
+        name: Run type checks
+        command: node_modules/.bin/tsc --noEmit
+
+    # Stop SaltyRTC server
+    - run: kill -INT $(cat /saltyrtc/server.pid)
+
 jobs:
-  build:
+  test-firefox-esr:
     docker:
-      - image: quay.io/saltyrtc/circleci-image-js:latest
+      - image: saltyrtc/circleci-image-js:firefox-91esr
         environment:
           FIREFOX_BIN: xvfb-firefox
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+    steps: *test-steps
+    environment:
+      - BROWSER: Firefox_circle_ci
+  test-firefox-stable:
+    docker:
+      - image: saltyrtc/circleci-image-js:firefox-97
+        environment:
+          FIREFOX_BIN: xvfb-firefox
+    steps: *test-steps
+    environment:
+      - BROWSER: Firefox_circle_ci
+  test-chromium-latest:
+    docker:
+     - image: saltyrtc/circleci-image-js:chromium-latest
+    steps: *test-steps
+    environment:
+      - BROWSER: ChromiumHeadless
 
-      # Install dependencies
-      - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # Start SaltyRTC server
-      - run: saltyrtc-server-launcher > /saltyrtc/server.pid && sleep 2
-
-      # Run tests
-      - run: npm run rollup_tests && npm test
-      - run: node_modules/.bin/tsc --noEmit
-
-      # Stop SaltyRTC server
-      - run: kill -INT $(cat /saltyrtc/server.pid)
+workflows:
+  version: 2
+  build:
+    jobs:
+      - test-firefox-esr
+      - test-firefox-stable
+      - test-chromium-latest
