--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/polyfill": "^7.0.0-rc.2",
     "@babel/preset-env": "^7.0.0-rc.2",
     "@saltyrtc/client": "^0.14.3",
-    "jasmine-core": "3.99",
+    "jasmine-core": "^4",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "^2.1.2",
